--- a/ReproducerApp/package.json
+++ b/ReproducerApp/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "install-pods-new-arch": "cd ios && RCT_NEW_ARCH_ENABLED=1 pod install"
   },
   "dependencies": {
     "react": "18.3.1",
